<?xml version="1.0"?>
<package format="3">
  <name>bpp_orchestrator</name>
  <version>0.1.0</version>
  <description>Packee BPP 서비스를 처리하는 ROS 2 노드</description>
  <maintainer email="lhs@example.com">lhs</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>shopee_interfaces</depend>

  <exec_depend>rectpack</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
